<resources>
    <string name="app_name">Vantrack</string>
    <string name="app_name_underline_n_cap"><u>VANTRACK</u></string>
    <string name="log_in">Iniciar sesión</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="sign_up">Quiero crear una cuenta</string>
    <string name="update_password">Actualizar contraseña</string>
    <string name="title_activity_login">Iniciar sesión</string>
    <string name="title_activity_sign_up">Registrarme</string>
    <string name="title_activity_forgot_password">Restaurar contraseña</string>
    <string name="search">Buscar</string>
    <string name="track_my_van">Trackear Combi</string>
    <string name="my_trips">Mis Viajes</string>
    <string name="confirm_trips">Confirmar Viajes</string>
    <string name="my_reservations">Próximos viajes</string>
    <string name="next_trip_passengers">Pasajeros del próximo viaje</string>
    <string name="my_reservations_history">Historial de viajes</string>
    <string name="btn_date_text">Fecha</string>
    <string name="date">Fecha: </string>
    <string name="return_date">Fecha regreso</string>
    <string name="hour">Hora: </string>
    <string name="origin">Origen: </string>
    <string name="destination">Destino: </string>
    <string name="company">Empresa: </string>
    <string name="route">Recorrido: </string>
    <string name="available_seats">Asientos disponibles: </string>
    <string name="seats_booked">Asientos reservados: </string>
    <string name="searchReservation">Busca y reserva tu viaje</string>
    <string name="search_results">Resultados de tu busqueda</string>
    <string name="reservation_details">Detalle de la reserva</string>
    <string name="trip_detail">Detalle del viaje</string>
    <string name="more">Mas</string>
    <string name="start_trip">Iniciar Viaje</string>
    <string name="modification">Modificar</string>
    <string name="modify_trip">Modificar Viaje</string>
    <string name="modification_confirmation">Confirmar Modificación</string>
    <string name="wrong_password">La contraseña es incorrecta.</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>
    <string name="price">Precio: </string>
    <string name="calification">Calificación: </string>
    <string name="modification_hour">Modificar Hora</string>
    <string name="modification_date">Modificar Fecha</string>
    <string name="confirm_passengers">Confirmar pasajeros</string>
    <string name="isPending">En lista de espera</string>
    <string name="status">Estado: </string>
    <string name="confirmed_reservation">Reserva Confirmada</string>
    <string name="cancelled_reservation">Reserva Cancelada</string>
    <string name="reservation_rated">Reserva Calificada</string>

    <!-- Strings related to configuration -->
    <string name="configuration">Configuración</string>
    <string name="my_account">Mi Cuenta</string>
    <string name="notificacions">Notificaciones</string>
    <string name="notifications">Mis Notificaciones</string>
    <string name="help">Ayuda</string>
    <string name="close_session">Cerrar Sesión</string>
    <string name="close_session_alert_msg">Desea cerrar sesión?</string>
    <string name="delete_account_alert_msg">Desea eliminar su cuenta?</string>
    <string name="delete_account_warning">
        Se perderán todos los datos y no podrán ser recuperados.
    </string>
    <string name="remove_user">Eliminar Cuenta</string>
    <string name="modify_user">Modificar Usuario</string>
    <string name="modify_password">Modificar Contraseña</string>
    <string name="sort_by_string">Ordenar por: </string>
    <string name="time_range">Rango horario: </string>
    <string name="rate_reservation">Calificar Viaje</string>
    <string name="cancel_trip">Cancelar Viaje</string>
    <string name="cancel_reservation">Cancelar Reserva</string>
    <string name="pay_reservation">Pagar Reserva</string>
    <string name="map_reservation">Ver en el Mapa</string>
    <string name="confirm_trip">Confirmar Viaje</string>
    <string name="company_filter_string">Filtrar por empresa:</string>
    <string name="one_way_trip">Solo ida</string>
    <string name="round_trip">Ida y vuelta</string>
    <string name="search_return_trips">Ver viajes de regreso</string>
    <string name="book_trip">Reservar Viaje</string>
    <string name="book_trip_and_search_return">Reservar Viaje y buscar viajes de vuelta</string>
    <string name="book_trip_confirmation">Desea reservar el viaje?</string>
    <string name="cancel_reservation_reasons">Por qué desea cancelar el viaje?</string>
    <string name="trip_booked">Viaje Reservado</string>
    <string name="trip_modified">Viaje Modificado</string>
    <string name="no_return_date">--/--/----</string>
    <string name="trip_stops">Paradas intermedias:</string>
    <string name="see_stops">Ver paradas intermedias</string>
    <string name="choose_stop">Seleccione la parada</string>
    <string name="hop_on_stop">Sube en: </string>
    <string name="paid_reservation">Reserva Paga</string>
    <string name="unpaid_reservation">Reserva Impaga</string>
    <string name="extra_charge_message">Recuerde que tendrá un recargo del 5% a la hora de pagar
        una reserva debido a que se encuentra sancionado.</string>
    <string name="min_qty_stops">El viaje debe tener como mínimo 2 paradas.</string>

    <!-- Strings related to login -->
    <string name="prompt_first_name">Nombre</string>
    <string name="prompt_last_name">Apellido</string>
    <string name="prompt_dni">DNI</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_repeat_email">Repetir email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_password_new">Nueva contraseña</string>
    <string name="prompt_repeat_password">Repetir contraseña</string>
    <string name="prompt_forgot_password">Restaurar contraseña</string>
    <string name="action_sign_up">Confirmar mis datos</string>
    <string name="action_update_pwd">Confirmar nueva contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_or_register">Iniciar sesión o registrarme</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Campo obligatorio</string>
    <string name="permission_rationale">Se necesita permiso de contactos para loguearse con su
        correo</string>
    <string name="title_activity_drawer">drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuracion</string>
    <string name="seats_qty">Cantidad de asientos: </string>

    <!-- Strings related to More options pane -->
    <string name="more_options">Más Opciones</string>

    <!-- Strings related to Localization-->
    <string name="distance_van_user">Llegada al Origen: (mins)</string>
    <string name="distance_user_destination">Llegada al Destino: (mins)</string>
    <string name="dynamic_ETA_origin">""</string>
    <string name="dynamic_ETA_destination">""</string>
    <string name="title_activity_maps">Mapa</string>
    <string name ="end_trip">Finalizar Viaje</string>
    <string name ="trip_end">Fin del Viaje</string>
    <string name="arrive_destination_msg">Estás llegando a tu destino! Muchas gracias por confiar
        en Vantrack</string>

    <!-- Score activity -->
    <string name="score_trip_title">Cómo fue tu viaje?</string>
    <string name="score_trip_detail">Expresá tu opinión acerca de la puntualidad, confort y seguridad en este viaje.</string>
    <string name="score_driver_title">Cómo calificarías al conductor?</string>
    <string name="score_driver_detail">Nos interesa saber el trato recibido por el chofer y su forma de conducir.</string>
    <string name="additional_comment">Comentario Adicional</string>
    <string name="confirm_score">Confirmar Calificación</string>
    <string name="very_bad_score">Muy malo</string>
    <string name="bad_score">Malo</string>
    <string name="regular_score">Regular</string>
    <string name="good_score">Bueno</string>
    <string name="very_good_score">Muy Bueno</string>
    <string name="excellent_score">Excelente</string>

    <!-- Commons and central activity-->
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="location_alert_title">Ubicación</string>
    <string name="location_alert_content">El GPS parece estar desactivado, ¿deseas activarlo?</string>
    <string name="additional_comment_title">Desea agregar algún comentario?</string>
    <string name ="user_name">"Nombre: "</string>
    <string name ="user_surname">"Apellido: "</string>
    <string name ="user_email">"Email: "</string>

</resources>
