<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_add1"
        android:title="@string/search"
        android:titleCondensed=""
        app:showAsAction="withText" />


    <item
        android:id="@+id/action_trips"
        android:enabled="true"
        android:icon="@drawable/ic_add2"
        android:title="@string/my_trips"
        app:showAsAction="withText"
        />
    <item
        android:id="@+id/action_more"
        android:enabled="true"
        android:icon="@drawable/ic_settings_new"
        android:title="@string/configuration"
        app:showAsAction="withText"
        />



</menu>